--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/react": "^5.11.0",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.5.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
